--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             padding: 0;
             background-color: #0a0a23; /* Тёмный фон */
             color: #ffffff; /* Белый текст */
-            background-image: url('file:///C:/Users/sasha/Downloads/image.png'); /* Фоновое изображение */
+            background-image: url('https://github.com/Ganz3312/index/blob/main/image.png?raw=true'); /* Фоновое изображение */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
