--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <img src="images/logo.png" alt="Логотип сайта">
     <title>Лор из игровой вселенной</title>
     <style>
         /* Основные стили */
