--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="https://github.com/Ganz3312/index/blob/main/5357517732763003268.jpg?raw=true">
     <title>Лор из игровой вселенной</title>
     <style>
         /* Основные стили */
