--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
     <section id="operations">
         <h2>Операции</h2>
-        <p>Опишите основные операции, которые были проведены в рамках кампании. Вы можете добавить ссылки на более подробные описания каждой операции.</p>
+        <p>истории завоевания, выживания и открытий. От первых колоний на Проксиме b до загадочных сигналов из туманности Хауса — каждая миссия STT приближает человечество к новому будущему.  </p>
         <ul>
             <li><a href="#operation1">Операция 1</a></li>
             <li><a href="#operation2">Операция 2</a></li>
